# HungarianAlign

./: .gitignore  CMakeLists.txt  README  README.md  index.html
.github/workflows/: ci.yml
include/: hungarian_matrix.h  mask.h  matrix.h  permutation.h  sequence_problem.h  utilities.h
main/: main.cc
source/: output.cc
tests/: matrix_00.cc  matrix_01.cc  matrix_02.cc  permutation_01.output
